--- a/haskell-spdy.cabal
+++ b/haskell-spdy.cabal
@@ -24,6 +24,8 @@ Library
     , bytestring	>= 0.9 && < 0.10
     , containers	>= 0.4 && < 0.5
     , ghc-binary	>= 0.5 && < 0.6
+    , network		>= 2.3.0
+    , utf8-string	>= 0.3
     , zlib-bindings	>= 0.0.2 && < 0.1
   
 Executable test
